indiv startseite: bildoverflow fix

--- a/web/sites/all/modules/onlinekurslabor/custom_general/css/custom.css
+++ b/web/sites/all/modules/onlinekurslabor/custom_general/css/custom.css
@@ -1279,3 +1279,9 @@ div.view-courses-kurse-bersicht .nm-stream-node-container:hover .courseitem_imag
 {
     opacity: 0.5;
 }
+//verhinderte überlauf des kurs-bilds auf mobil
+div.view-courses-kurse-bersicht .nm-stream-node-container  .courseitem_courselogo
+{
+    max-width: 100%;
+    
+}
